--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ defusedxml==0.5.0
 dj-database-url==0.4.2
 Django==1.11
 django-braces==1.12.0
+django-cors-headers==2.2.0
 django-oauth-toolkit==1.0.0
 django-rest-framework-social-oauth2==1.1.0
 djangorestframework==3.7.7
