--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 Django==2.0.4
 django-cors-headers==2.2.0
 djangorestframework==3.7.7
+djangorestframework-jwt==1.11.0
 psycopg2==2.7.4
 psycopg2-binary==2.7.4
+PyJWT==1.6.1
 pytz==2018.3
